<resources>
    <string name="app_name">Fish Market</string>
    <string name="title_home">Home</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_add_restaurant">Add Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="et_name">Name</string>
    <string name="btn_save">Save</string>
    <string name="delete_warning_message">Are you sure want to delete %s?</string>
    <string name="delete_restaurant_title">Delete Restaurant</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="title_edit_restaurant">Edit Restaurant</string>
    <string name="title_table">Table</string>
    <string name="empty_data">Empty data</string>
    <string name="title_add_table">Add Table</string>
    <string name="delete_table_title">Delete Table</string>
    <string name="title_edit_table">Edit Table</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="select_table">Select Table</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="warning_message_select_table">Please select table</string>
    <string name="warning_message_select_restaurant">Please Select Restaurant</string>
    <string name="status_transaction" translatable="false"><![CDATA[Status: <font color="%s">%s</font>]]></string>
    <string name="status_history_transaction" translatable="false"><![CDATA[<font color="%s">%s</font>]]></string>
    <string name="transaction_id" translatable="false">ID: %s</string>
    <string name="btn_select">Select</string>
    <string name="data_minutes">%d minutes</string>
    <string name="warning_select_progress">Please select progress step by step</string>
    <string name="btn_paid">Paid</string>
    <string name="btn_progress">Progress</string>
    <string name="title_menu">Menu</string>
    <string name="et_price">Price</string>
    <string name="rupiah" translatable="false">Rp %s</string>
    <string name="et_category">Category</string>
    <string name="delete_menu">Delete Menu</string>
    <string name="title_category">Category</string>
    <string name="title_add_menu">Add Menu</string>
    <string name="title_edit_menu">Edit Menu</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="warning_category_name_empty">Please fill category name</string>
    <string name="delete_category">Delete Category</string>
    <string name="select_category">Select Category</string>
    <string name="warning_menu_name_empty">Please fill menu name</string>
    <string name="warning_price_menu_empty">Please fill price menu</string>
    <string name="warning_category_menu_empty">Please fill category menu</string>
    <string name="title_transaction">Transaction</string>
    <string name="select_date">Select Date</string>
    <string name="total_sales">Total Sales</string>
    <string name="total_income">Total Income</string>
    <string name="placeholder_total_item" translatable="false">0</string>
    <string name="placeholder_total_income" translatable="false">Rp 0</string>
    <string name="title_report">Report</string>
    <string name="selected_date" translatable="false">%s - %s</string>
    <string name="title_history">History</string>
    <string name="total" translatable="false">Total</string>
    <string name="status" translatable="false">Status</string>
    <string name="time">Time</string>
    <string name="information_transaction">Transaction Information</string>
    <string name="title_transaction_detail">Transaction Detail</string>
    <string name="detail_item" translatable="false">Detail Item</string>
    <string name="placeholder_quantity" translatable="false">1</string>
    <string name="placeholder_menu" translatable="false">Nasi Goreng</string>
    <string name="placeholder_price" translatable="false">Rp 1.000</string>

    <string-array name="unit_array">
        <item>Bulat</item>
        <item>Decimal</item>
    </string-array>
    <string name="warning_unit_menu_empty">Please fill unit menu</string>
    <string name="kampung_mandar" translatable="false">Kampung Mandar</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="et_quantity">Quantity</string>
    <string name="all">all</string>
    <string name="total_fee">Total fee</string>
    <string name="review_transaction">Review Transaction</string>
    <string name="warning_empty_table_name">Please fill table name</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_login">Login</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="placeholder_email" translatable="false">user@gmail.com</string>
    <string name="not_valid_table_name">Table name not valid</string>
    <string name="warning_restaurant_name_empty">Please fill restaurant name</string>
    <string name="select_customer">Select Customer</string>
    <string name="customer">Customer</string>
    <string name="print" translatable="false">print</string>
    <string name="address">Kampungmandar, Banyuwangi Sub-District, Banyuwangi Regency, East Java 68419</string>
    <string name="restaurant">Restaurant</string>
    <string name="placeholder_restaurant" translatable="false">Bang Gali</string>
    <string name="item_sold">Item Sold</string>
    <string name="remove">Remove</string>
    <string name="warning_quantity_empty">Please fill quantity menu</string>
    <string name="queue_number">Queue</string>
    <string name="queue">Queue: %s</string>
    <string name="additional_order">Additional Order</string>
    <string name="order">Order</string>
    <string name="et_discount">Discount</string>
    <string name="title_payment">Payment</string>
    <string name="add_discount">Add Discount</string>
    <string name="warning_discount_empty">Please fill discount value</string>
    <string name="warning_discount_more">Discount value more than total fee</string>
    <string name="subtotal" translatable="false">Subtotal</string>

</resources>