<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_transaction"
        android:title="@string/title_history" />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_food"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/table"
        android:icon="@drawable/ic_table"
        android:title="@string/title_table" />

    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/title_report" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>