<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurant"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fishmarket.ui.restaurant.list_restaurant.RestaurantFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_restaurant">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_add_restaurant"
            app:destination="@id/navigation_add_restaurant" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_edit_restaurant"
            app:destination="@id/navigation_edit_restaurant" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_restaurant"
        android:name="com.example.fishmarket.ui.restaurant.add_restaurant.AddRestaurantFragment"
        android:label="@string/title_add_restaurant"
        tools:layout="@layout/fragment_add_restaurant" />

    <fragment
        android:id="@+id/navigation_edit_restaurant"
        android:name="com.example.fishmarket.ui.restaurant.edit_restaurant.EditRestaurantFragment"
        android:label="@string/title_edit_restaurant"
        tools:layout="@layout/fragment_edit_restaurant" />

</navigation>