<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.review_transaction.ReviewTransactionFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDetailTransaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/layoutKeterangan"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_history_detail" />

    <RelativeLayout
        android:id="@+id/layoutKeterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_top"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvDetailTransaction">

        <TextView
            android:id="@+id/placeholderTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif"
            android:text="@string/title_table"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTableName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/placeholderTable"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:text="@string/placeholder_quantity"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/placeholderTotalFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/placeholderTable"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/total_fee"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTotalFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTableName"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/placeholderTotalFee"
            android:fontFamily="sans-serif-black"
            android:gravity="end"
            android:text="@string/placeholder_price"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTotalFee"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_save"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>